# ralph

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  README.md  flake.nix  justfile  ralph.toml
.cursor/: worktrees.json
.cursor/rules/: commit-messages.mdc  ralph.mdc  rules.mdc  rust.mdc
.github/workflows/: ci.yml
specs/: agent-integration.md  agents.md  cli.md  config.md  loop.md  monitoring.md  provider-flag.md  sandbox-improvements.md  sandbox.md  validation.md
src/: config.rs  detection.rs  main.rs  notifications.rs  state.rs
src/agent/: claude.rs  cursor.rs  mock.rs  mod.rs
src/commands/: cancel.rs  clean.rs  image.rs  init.rs  loop_cmd.rs  mod.rs  revert.rs  status.rs
src/commands/loop_cmd/: format.rs  git.rs  mod.rs  worktree.rs
src/sandbox/: docker.rs  error.rs  mod.rs  network.rs  noop.rs
src/templates/: agents.md  mod.rs  prompt_build.md  prompt_plan.md  ralph.toml  rules.mdc
tests/: cli.rs
