[package]
name = "ralph"
version = "0.1.0"
edition = "2021"
description = "Ralph Wiggum technique - iterative AI development loops"
license = "MIT"
repository = "https://github.com/your-org/ralph"
keywords = ["ai", "development", "automation", "ralph", "cursor", "claude"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Docker
bollard = "0.18"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
dirs = "5"
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
